--- a/torcs/torcs/src/drivers/Makefile
+++ b/torcs/torcs/src/drivers/Makefile
@@ -17,7 +17,7 @@
 
 SUBDIRS = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
-DATASUBDIRS = $(SUBDIRS)
+SHIPSUBDIRS = $(SUBDIRS)
 
 PKGSUBDIRS	= $(SUBDIRS)
 
