--- a/torcs/torcs/src/drivers/berniw/7/Makefile
+++ b/torcs/torcs/src/drivers/berniw/7/Makefile
@@ -18,9 +18,9 @@
 
 ROBOT = berniw
 
-DATADIR   = drivers/${ROBOT}/7
+SHIPDIR   = drivers/${ROBOT}/7
 
-DATA      = lotus-gt1.rgb $(shell find *.xml -maxdepth 0 -type f -print)
+SHIP      = lotus-gt1.rgb $(shell find *.xml -maxdepth 0 -type f -print)
 
 berniw-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
