--- a/torcs/torcs/src/drivers/berniw/Makefile
+++ b/torcs/torcs/src/drivers/berniw/Makefile
@@ -6,13 +6,13 @@ MODULEDIR = drivers/${ROBOT}
 
 SOURCES   = ${ROBOT}.cpp spline.cpp trackdesc.cpp pathfinder.cpp mycar.cpp
 
-DATADIR   = drivers/${ROBOT}
+SHIPDIR   = drivers/${ROBOT}
 
-DATA      = ${ROBOT}.xml logo.rgb parameter.dat intsinsqr.dat intcossqr.dat
+SHIP      = ${ROBOT}.xml logo.rgb parameter.dat intsinsqr.dat intcossqr.dat
 
-DATASUBDIRS = 1 2 3 4 5 6 7 8 9 10
+SHIPSUBDIRS = 1 2 3 4 5 6 7 8 9 10
 
-PKGSUBDIRS	= $(DATASUBDIRS)
+PKGSUBDIRS	= $(SHIPSUBDIRS)
 
 berniw-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
