--- a/torcs/torcs/src/drivers/cylos1/tracksdata/Makefile
+++ b/torcs/torcs/src/drivers/cylos1/tracksdata/Makefile
@@ -5,10 +5,13 @@
 #
 
 
-DATADIR   = drivers/cylos1/tracksdata
+SHIPDIR   = drivers/cylos1/tracksship
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print)
+SHIP      = $(shell find *.xml -maxdepth 0 -type f -print)
 
+g-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+
+g-robots_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
