--- a/torcs/torcs/src/drivers/damned/1/Makefile
+++ b/torcs/torcs/src/drivers/damned/1/Makefile
@@ -18,9 +18,9 @@
 
 ROBOT = damned
 
-DATADIR   = drivers/${ROBOT}/1
+SHIPDIR   = drivers/${ROBOT}/1
 
-DATA      =  car.xml car-dirt.xml buggy.rgb logo.rgb
+SHIP      =  car.xml car-dirt.xml buggy.rgb logo.rgb
 
 e-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
