--- a/torcs/torcs/src/libs/Makefile
+++ b/torcs/torcs/src/libs/Makefile
@@ -16,7 +16,7 @@
 ##############################################################################
 
 
-DATASUBDIRS	= tgf
+SHIPSUBDIRS	= tgf
 
 EXPINCDIRS	= txml tgf torcs racemantools robottools
 
