--- a/torcs/torcs/src/drivers/K1999/2/Makefile
+++ b/torcs/torcs/src/drivers/K1999/2/Makefile
@@ -18,9 +18,9 @@
 
 ROBOT = K1999
 
-DATADIR   = drivers/${ROBOT}/2
+SHIPDIR   = drivers/${ROBOT}/2
 
-DATA      =  cg-nascar-rwd.rgb settings.xml
+SHIP      =  cg-nascar-rwd.rgb settings.xml
 
 K1999-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
