--- a/torcs/torcs/src/drivers/berniw/4/Makefile
+++ b/torcs/torcs/src/drivers/berniw/4/Makefile
@@ -18,9 +18,9 @@
 
 ROBOT = berniw
 
-DATADIR   = drivers/${ROBOT}/4
+SHIPDIR   = drivers/${ROBOT}/4
 
-DATA      = viper-gts-r.rgb $(shell find *.xml -maxdepth 0 -type f -print)
+SHIP      = viper-gts-r.rgb $(shell find *.xml -maxdepth 0 -type f -print)
 
 berniw-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
