--- a/torcs/torcs/src/drivers/human/tracks/mixed-2/Makefile
+++ b/torcs/torcs/src/drivers/human/tracks/mixed-2/Makefile
@@ -17,9 +17,9 @@
 
 ROBOT = human
 
-DATADIR   = drivers/${ROBOT}/tracks/mixed-2
+SHIPDIR   = drivers/${ROBOT}/tracks/mixed-2
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print)
+SHIP      = $(shell find *.xml -maxdepth 0 -type f -print)
 
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
