--- a/torcs/torcs/src/drivers/tita/Makefile
+++ b/torcs/torcs/src/drivers/tita/Makefile
@@ -24,13 +24,13 @@ MODULEDIR = drivers/${ROBOT}
 
 SOURCES   = ${ROBOT}.cpp common.cpp
 
-DATADIR   = drivers/${ROBOT}
+SHIPDIR   = drivers/${ROBOT}
 
-DATA      = ${ROBOT}.xml car.xml logo.rgb lotus-gt1.rgb
+SHIP      = ${ROBOT}.xml car.xml logo.rgb lotus-gt1.rgb
 
-DATASUBDIRS = tracksdata
+SHIPSUBDIRS = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
-PKGSUBDIRS		= ${DATASUBDIRS}
+PKGSUBDIRS		= ${SHIPSUBDIRS}
 
 e-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
