--- a/torcs/torcs/data/cars/models/lotus-gt1/Makefile
+++ b/torcs/torcs/data/cars/models/lotus-gt1/Makefile
@@ -23,9 +23,9 @@ DATA      = lotus-gt1.xml  lotus-gt1.ac \
 	    lotus-gt1-base.ac texmapper.xml \
 	    tex-wheel.rgb lotus-gt1.rgb lotus-gt1-512.rgb 
 
-gt-cars_PKGFILES	= $(DATA)
+data-cars-gt_PKGFILES	= $(DATA)
 
-gt-cars_PKGDIR	= $(DATADIR)
+data-cars-gt_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
