--- a/torcs/torcs/data/tracks/road/g-track-2/Makefile
+++ b/torcs/torcs/data/tracks/road/g-track-2/Makefile
@@ -20,9 +20,9 @@ DATADIR   = tracks/road/g-track-2
 
 DATA      = g-track-2.xml g-track-2.ac g-track-2-relief.ac g-track-2.png background.png $(shell find * -maxdepth 0 -type f -name '*.rgb')
 
-g-tracks_PKGFILES	= $(DATA)
+data-tracks-cg_PKGFILES	= $(DATA)
 
-g-tracks_PKGDIR		= $(DATADIR)
+data-tracks-cg_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
