--- a/torcs/torcs/src/drivers/K1999/1/Makefile
+++ b/torcs/torcs/src/drivers/K1999/1/Makefile
@@ -22,9 +22,9 @@ SHIPDIR   = drivers/${ROBOT}/1
 
 SHIP      =  buggy.rgb settings.xml
 
-K1999-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src-robots-K1999_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-K1999-robots_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-K1999_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
