--- a/torcs/torcs/src/drivers/K1999/Makefile
+++ b/torcs/torcs/src/drivers/K1999/Makefile
@@ -31,8 +31,8 @@ SHIPSUBDIRS = 1 2
 
 PKGSUBDIRS	= $(SHIPSUBDIRS)
 
-K1999-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src-robots-K1999_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-K1999-robots_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-K1999_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
