--- a/torcs/torcs/data/cars/models/155-DTM/Makefile
+++ b/torcs/torcs/data/cars/models/155-DTM/Makefile
@@ -21,9 +21,9 @@ DATADIR   = cars/155-DTM
 
 DATA      = $(shell find *.xml -maxdepth 0 -type f -print)  $(shell find *.rgb -maxdepth 0 -type f -print)  $(shell find *.ac -maxdepth 0 -type f -print)
 
-dtm-cars_PKGFILES	= $(DATA)
+data-cars-dtm_PKGFILES	= $(DATA)
 
-dtm-cars_PKGDIR	= $(DATADIR)
+data-cars-dtm_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
