--- a/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
+++ b/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
@@ -20,9 +20,9 @@ DATADIR   = cars/cg-nascar-rwd
 
 DATA      = cg-nascar-rwd.xml cg-nascar-rwd.ac cg-nascar-rwd-lod1.ac cg-nascar-rwd.rgb tex-wheel.rgb
 
-cg-cars_PKGFILES= $(DATA)
+data-cars-cg_PKGFILES= $(DATA)
 
-cg-cars_PKGDIR	= $(DATADIR)
+data-cars-cg_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
