--- a/torcs/torcs/data/tracks/aalborg/Makefile
+++ b/torcs/torcs/data/tracks/aalborg/Makefile
@@ -20,9 +20,9 @@ DATADIR   = tracks/road/aalborg
 
 DATA      = aalborg.xml aalborg.ac aalborg.png
 
-base-tracks_PKGFILES	= $(DATA)
+data-tracks-base_PKGFILES	= $(DATA)
 
-base-tracks_PKGDIR		= $(DATADIR)
+data-tracks-base_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
