--- a/torcs/torcs/src/drivers/berniw/Makefile
+++ b/torcs/torcs/src/drivers/berniw/Makefile
@@ -14,9 +14,9 @@ SHIPSUBDIRS = 1 2 3 4 5 6 7 8 9 10
 
 PKGSUBDIRS	= $(SHIPSUBDIRS)
 
-berniw-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src-robots-berniw_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-berniw-robots_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-berniw_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 # Mandatory Line Do Not Remove 
 include ${MAKE_DEFAULT}
