--- a/torcs/torcs/src/drivers/cylos1/Makefile
+++ b/torcs/torcs/src/drivers/cylos1/Makefile
@@ -20,9 +20,9 @@ SHIPSUBDIRS = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
 PKGSUBDIRS		= ${SHIPSUBDIRS}
 
-g-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src-robots-cg_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-g-robots_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-cg_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
