--- a/torcs/torcs/src/drivers/damned/5/Makefile
+++ b/torcs/torcs/src/drivers/damned/5/Makefile
@@ -21,9 +21,9 @@ SHIPDIR   = drivers/${ROBOT}/5
 
 SHIP      =  car.xml car-dirt.xml acura-nsx-sz.rgb logo.rgb
 
-e-robots_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src-robots-e_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-e-robots_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-e_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
