--- a/torcs/torcs/src/drivers/cylos1/tracksdata/Makefile
+++ b/torcs/torcs/src/drivers/cylos1/tracksdata/Makefile
@@ -9,9 +9,9 @@ SHIPDIR   = drivers/cylos1/tracksdata
 
 SHIP      = $(shell find *.xml -maxdepth 0 -type f -print)
 
-src-robots-cg_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-src-robots-cg_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
