--- a/torcs/torcs/src/drivers/damned/4/Makefile
+++ b/torcs/torcs/src/drivers/damned/4/Makefile
@@ -22,9 +22,9 @@ SHIPDIR   = drivers/${ROBOT}/4
 
 SHIP      =  p406.rgb car.xml car-dirt.xml torcs.rgb logo.rgb
 
-src-robots-e_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-src-robots-e_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
