--- a/torcs/torcs/src/drivers/lliaw/tracksdata/Makefile
+++ b/torcs/torcs/src/drivers/lliaw/tracksdata/Makefile
@@ -16,13 +16,13 @@
 ##############################################################################
 
 
-SHIPDIR   = drivers/lliaw/tracksship
+SHIPDIR   = drivers/lliaw/tracksdata
 
 SHIP      = $(shell find . -name '*.xml' -maxdepth 1 -type f -print)
 
-src-robots-e_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-src-robots-e_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGDIR		= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
