--- a/torcs/torcs/data/data/objects/tree1.ac
+++ b/torcs/torcs/data/data/objects/tree1.ac
@@ -4,29 +4,39 @@ OBJECT world
 kids 1
 OBJECT poly
 name "tree1"
-loc -2.5 0 -2.5
-texture "tree1.rgb"
+loc 0 6 0
+texture "/home/torcs/runtime3/games/torcs/eee/tree1.rgb"
 numvert 8
-0 12 2.5
-5 12 2.5
-5 0 2.5
-0 0 2.5
-2.5 12 5
-2.5 12 0
-2.5 0 0
-2.5 0 5
-numsurf 2
+-2.5 6 0
+2.5 6 0
+2.5 -6 0
+-2.5 -6 0
+0 6 2.5
+0 6 -2.5
+0 -6 -2.5
+0 -6 2.5
+numsurf 4
 SURF 0x30
 mat 0
-refs 4
+refs 3
 3 0 0
+2 1 0
+0 0 1
+SURF 0x30
+mat 0
+refs 3
 2 1 0
 1 1 1
 0 0 1
 SURF 0x30
 mat 0
-refs 4
+refs 3
 7 0 0
+6 1 0
+4 0 1
+SURF 0x30
+mat 0
+refs 3
 6 1 0
 5 1 1
 4 0 1
