--- a/torcs/torcs/data/data/objects/tree7.ac
+++ b/torcs/torcs/data/data/objects/tree7.ac
@@ -15,18 +15,28 @@ numvert 8
 -0.1 7.68568 -7
 -0.1 -7.75 -7
 -0.0999996 -7.75 7
-numsurf 2
-SURF 0x20
+numsurf 4
+SURF 0x30
 mat 0
-refs 4
+refs 3
 3 0 0
+2 1 0
+0 0 1
+SURF 0x30
+mat 0
+refs 3
 2 1 0
 1 1 1
 0 0 1
-SURF 0x20
+SURF 0x30
 mat 0
-refs 4
+refs 3
 7 0 0
+6 1 0
+4 0 1
+SURF 0x30
+mat 0
+refs 3
 6 1 0
 5 1 1
 4 0 1
