--- a/torcs/torcs/data/cars/models/clkdtm/Makefile
+++ b/torcs/torcs/data/cars/models/clkdtm/Makefile
@@ -19,7 +19,7 @@
 
 DATADIR   = cars/clkdtm
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print)  $(shell find *.rgb -maxdepth 0 -type f -print)  $(shell find *.ac -maxdepth 0 -type f -print)
+DATA      = $(shell find *.xml -maxdepth 0 -type f -print)  $(shell find *.rgb -maxdepth 0 -type f -print)  $(shell find *.ac -maxdepth 0 -type f -print) $(shell find *.xcf -maxdepth 0 -type f -print)
 
 data-cars-dtm_PKGFILES	= $(DATA)
 
