--- a/torcs/torcs/data/cars/models/mclaren-f1/Makefile
+++ b/torcs/torcs/data/cars/models/mclaren-f1/Makefile
@@ -22,7 +22,7 @@ DATADIR   = cars/mclaren-f1
 
 DATA      = mclaren-f1.xml  mclaren-f1.ac \
 	    mclaren-f1-lod1.ac texmapper.xml \
-	    tex-wheel.rgb mclaren-f1.rgb mclaren-f1-512.rgb 
+	    tex-wheel.rgb mclaren-f1.rgb mclaren-f1-512.rgb mclaren-f1-src.ac
 
 data-cars-gt_PKGFILES	= $(DATA)
 
