--- a/torcs/torcs/data/cars/models/viper-gts-r/Makefile
+++ b/torcs/torcs/data/cars/models/viper-gts-r/Makefile
@@ -20,7 +20,7 @@
 DATADIR   = cars/viper-gts-r
 
 DATA      = viper-gts-r.xml tex-wheel.rgb viper-gts-r.rgb  viper-gts-r.ac \
-	    viper-gts-r-512.rgb viper-gts-r-base.ac texmapper.xml
+	    viper-gts-r-512.rgb viper-gts-r-base.ac texmapper.xml viper-gts-r-src.ac
 
 data-cars-gt_PKGFILES	= $(DATA)
 
