setups, changed berniw2-7 to porsche-gt3.

--- a/torcs/torcs/src/drivers/berniw2/7/Makefile
+++ b/torcs/torcs/src/drivers/berniw2/7/Makefile
@@ -20,7 +20,7 @@ ROBOT = berniw2
 
 SHIPDIR   = drivers/${ROBOT}/7
 
-SHIP      = cg-nascar-fwd.rgb $(shell find *.xml -maxdepth 0 -type f -print)
+SHIP      = porsche-gt3rs.rgb $(shell find *.xml -maxdepth 0 -type f -print)
 
 src-robots-berniw_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
