--- a/torcs/torcs/src/linux/Makefile
+++ b/torcs/torcs/src/linux/Makefile
@@ -24,6 +24,7 @@ LDFLAGS = -rdynamic
 
 SOLIBS  =  -lracemantools \
 	   -lrobottools   \
+	   -lraceengine   \
 	   -ltorcs        \
 	   -ltgf          \
 	   -ltxml	  \
