--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -33,7 +33,7 @@ AC_C_INLINE
 AC_HEADER_TIME
 
 AC_CHECK_PROG(AR, ar, :, ar, /usr/bin/ar)
-AC_CHECK_PROG(LD, ld, :, ld, /usr/bin/ld)
+AC_CHECK_PROG(LD, ld, :, ld, /usr/bin/gxx)
 
 AC_C_BIGENDIAN
 
@@ -45,8 +45,8 @@ AC_ARG_ENABLE(debug,
 	CFLAGS="$CFLAGS -O3 -fstrength-reduce -ffast-math -fomit-frame-pointer")
 
 AC_ARG_ENABLE(ccmalloc,
-	[  --enable-ccmalloc       set the ccmalloc mode (baware path...)], 
-	LDFLAGS="$LDFLAGS /home/torcs/ccmalloc-0.3.9-nco/obj/ccmalloc-g++.o -L/home/torcs/ccmalloc-0.3.9-nco/lib -lccmalloc",
+	[  --enable-ccmalloc       set the ccmalloc mode (beware path...)], 
+	LDFLAGS="$LDFLAGS /home/torcs/ccmalloc-0.3.9-nco/obj/ccmalloc-g++.o -L/home/torcs/ccmalloc-0.3.9-nco/lib -lccmalloc -ldl",
 	LDFLAGS="$LDFLAGS")
 
 CXXFLAGS="$CFLAGS"
