--- a/torcs/torcs/src/linux/Makefile
+++ b/torcs/torcs/src/linux/Makefile
@@ -24,11 +24,12 @@ LDFLAGS = -rdynamic
 
 SOLIBS  =  -lracemantools \
 	   -lrobottools   \
-	   -lraceengine   \
 	   -ltorcs        \
 	   -ltgf          \
 	   -ltxml	  \
 	   -lplibul
+
+#	   -lraceengine   \
 
 EXPDIR  = include
 
